// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BooleanWidget > renders a boolean false view widget component 1`] = `
<span
  className="metadata boolean widget"
>
  No
</span>
`;

exports[`BooleanWidget > renders a boolean false view widget component with children 1`] = `
<span
  className="metadata boolean widget"
>
  <strong>
    No
  </strong>
</span>
`;

exports[`BooleanWidget > renders a boolean true view widget component 1`] = `
<span
  className="metadata boolean widget"
>
  Yes
</span>
`;

exports[`BooleanWidget > renders a boolean true view widget component with children 1`] = `
<span
  className="metadata boolean widget"
>
  <strong>
    Yes
  </strong>
</span>
`;

exports[`BooleanWidget > renders an empty boolean view widget component 1`] = `null`;
